adding missing line
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -41,5 +41,5 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
     is_expected=if(priority=="critical", "true", "false") \
 | iplocation falcon_device.external_ip \
 | rename lon as long, City as city, Country as country \
-| table ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected
+| table ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices
