--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -42,4 +42,5 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | iplocation falcon_device.external_ip \
 | rename lon as long, City as city, Country as country \
 | table ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
-| outputlookup key_field=_key crowdstrike_devices
+| outputlookup key_field=_key crowdstrike_devices \
+| stats count
