--- a/src/SA-CrowdstrikeDevices/default/collections.conf
+++ b/src/SA-CrowdstrikeDevices/default/collections.conf
@@ -16,3 +16,4 @@ field.long        = string
 field.mac         = string
 field.nt_host     = string
 field.priority    = string
+replicate         = true
