--- a/src/SA-CrowdstrikeDevices/default/inputs.conf
+++ b/src/SA-CrowdstrikeDevices/default/inputs.conf
@@ -9,4 +9,4 @@ category    = crowdstrike_devices
 description = Device information from SA-CrowdstrikeDevices.
 target      = asset
 url         = lookup://crowdstrike_devices
-disabled    = true
+disabled    = False
