--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -4,7 +4,7 @@
 # into ../local and edit there.
 
 [Crowdstrike Devices Lookup - Gen]
-disabled = true
+disabled = false
 cron_schedule = 19 * * * *
 description = populates kvstore lookup: crowdstrike_devices
 dispatch.earliest_time = -61m@m
@@ -24,7 +24,8 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
     "cs_dv_globalconfig_applied:".'falcon_device.device_policies.global_config.applied',\
     "cs_dv_sensorupdate_applied:".'falcon_device.device_policies.sensor_update.applied',\
     "cs_uninstallprotection:".'falcon_device.device_policies.sensor_update.uninstall_protection',\
-    "cs_os_major_version:".'falcon_device.major_version', "cs_os_platform:".'falcon_device.platform_name',\
+    "cs_os_major_version:".'falcon_device.major_version',\
+    "cs_os_platform:".'falcon_device.platform_name',\
     "cs_os_name:".'falcon_device.os_version',\
     "cs_dv_type:".'falcon_device.product_type_desc',\
     "cs_dv_status:".'falcon_device.status',\
