--- a/src/SA-CrowdstrikeDevices/default/transforms.conf
+++ b/src/SA-CrowdstrikeDevices/default/transforms.conf
@@ -4,8 +4,9 @@
 # into ../local and edit there.
 
 [crowdstrike_devices]
-external_type        = kvstore
-collection           = crowdstrike_devices_collection
-max_matches          = 1
-case_sensitive_match = 0
-fields_list          = _key,bunit,category,city,country,dns,ip,is_expected,lat,long,mac,nt_host,priority
+external_type = kvstore
+collection = crowdstrike_devices_collection
+max_matches = 1
+case_sensitive_match = false
+reverse_lookup_honor_case_sensitive_match = false
+fields_list = _key,bunit,category,city,country,dns,ip,is_expected,lat,long,mac,nt_host,priority
