--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -16,4 +16,6 @@ jobs:
         run: |
           wget https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz
           pip install splunk-packaging-toolkit-1.0.1.tar.gz
-          ls -al
+          mkdir -p build/{packages,reports}
+          cd src/
+          slim package -o ~/build/package SA-CrowdstrikeDevices
