--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -13,9 +13,13 @@ jobs:
         with:
           python-version: 3.7
       - name: Download packaging toolkit
+        run: wget https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz
+      - name: Install packaging toolkit
+        run: pip install splunk-packaging-toolkit-1.0.1.tar.gz
+      - name: Package app
         run: |
-          wget https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz
-          pip install splunk-packaging-toolkit-1.0.1.tar.gz
           mkdir -p build/{packages,reports}
           cd src/
           slim package -o ~/build/package SA-CrowdstrikeDevices
+      - name: Download and run helper script
+        run: curl -sS https://gist.githubusercontent.com/ZachChristensen28/f654dbc203ca1d6cb83a46bf70bfc24e/raw/495fcf17e3af824f284d236bf30539c859c72854/zts-appinspect.sh | bash -s submit
