--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -21,5 +21,11 @@ jobs:
           mkdir -p build/{packages,reports}
           cd src/
           slim package -o ~/build/package SA-CrowdstrikeDevices
+          cd ~/build/package
       - name: Download and run helper script
-        run: curl -sS https://gist.githubusercontent.com/ZachChristensen28/f654dbc203ca1d6cb83a46bf70bfc24e/raw/29f816448112cd6ec2c4570c47c1461f73afcab7/zts-appinspect.sh | API_USER=${{ secrets.API_USER }} bash -s submit
+        run: wget https://gist.githubusercontent.com/ZachChristensen28/f654dbc203ca1d6cb83a46bf70bfc24e/raw/67a89c8d65d127a7e6fdf98cd4bc17d9e47fde82/zts-appinspect.sh && chmod +x zts-appinspect.sh
+      - name: Validate credentials
+        run: |
+          export API_USER=${{ secrets.API_USER }}
+          export API_PASS=${{ secrets.API_PASS }}
+          ./zts-appinspect.sh -v
