--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           python-version: 3.7
       - name: install dependencies
-        run: sudo apt-get install -y jq
+        run: sudo apt-get install -y jq curl wget
       - name: Download packaging toolkit
         run: wget https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz
       - name: Install packaging toolkit
