--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -27,8 +27,9 @@ jobs:
         run: wget https://raw.githubusercontent.com/ZachChristensen28/splunk-app-dev/master/validate.sh && chmod +x validate.sh
       - name: Validate credentials
         run: |
-          export API_USER=${{ secrets.API_USER }}
-          export API_PASS=${{ secrets.API_PASS }}
+          API_USER=${{ secrets.API_USER }}
+          API_PASS=${{ secrets.API_PASS }}
+          DEBUG="true"
           ./validate.sh -v
       - name: Submit App for vetting
         run: ./validate.sh submit $(ls)
