--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Validate credentials
         run: API_USER='${{ secrets.API_USER }}' API_PASS='${{ secrets.API_PASS }}' DEBUG="true" ./validate.sh -v
       - name: Submit App for vetting
-        run: ./validate.sh submit $(ls)
+        run: |
+          ls
+          echo $(ls)
+          ./validate.sh submit $(ls)
       - name: Check Status
         run: ./validate.sh status
