--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -23,14 +23,16 @@ jobs:
           cd src
           slim package -o ~/build/packages SA-CrowdstrikeDevices
       - name: Download and run helper script
-        run: wget https://raw.githubusercontent.com/ZachChristensen28/splunk-app-dev/master/validate.sh && chmod +x validate.sh
+        run: |
+          cd ~/build/packages
+          wget https://raw.githubusercontent.com/ZachChristensen28/splunk-app-dev/master/validate.sh && chmod +x validate.sh
       - name: Validate credentials
-        run: API_USER='${{ secrets.API_USER }}' API_PASS='${{ secrets.API_PASS }}' DEBUG="true" ./validate.sh -v
+        run: |
+          cd ~/build/packages
+          API_USER='${{ secrets.API_USER }}' API_PASS='${{ secrets.API_PASS }}' DEBUG="true" ./validate.sh -v
       - name: Submit App for vetting
         run: |
           cd ~/build/packages
-          ls
-          echo $(ls)
           ./validate.sh submit $(ls)
       - name: Check Status
         run: ./validate.sh status
