--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -29,11 +29,11 @@ jobs:
           wget https://raw.githubusercontent.com/ZachChristensen28/splunk-app-dev/master/validate.sh && chmod +x validate.sh
       - name: Validate credentials
         run: |
-          API_USER='${{ secrets.API_USER }}' API_PASS='${{ secrets.API_PASS }}' DEBUG="true" ./validate.sh -v
+          API_USER='${{ secrets.API_USER }}' API_PASS='${{ secrets.API_PASS }}' validate.sh -v
       - name: Submit App for vetting
         run: |
           cd ~/build/packages
-          ./validate.sh submit $(ls)
+          validate.sh submit $(ls)
       - name: Check Status
         run: |
-          ./validate.sh status
+          validate.sh status
