--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -37,13 +37,15 @@ jobs:
       - name: Check Status
         run: validate.sh status
       - name: Get report
-        run: validate.sh report
+        run: |
+          validate.sh report
+          ls ~/build/reports
       - name: Collect report
         uses: actions/upload-artifact@v3
         with:
           name: appinspect report
-          path: build/reports/
+          path: ~/build/reports/
       - name: Check Appinspect for errors
         run: |
-          test -f errors.txt && echo "Errors found" && exit 1
-          test -f failures.txt && echo "Failures found" && exit 1
+          test -e errors.txt && echo "Errors found" && exit 1
+          test -e failures.txt && echo "Failures found" && exit 1
