--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
       - master
-    types: [opened, ready_for_review]
+    types: [opened, synchronize, ready_for_review]
 jobs:
   validate:
     runs-on: ubuntu-latest
