--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -39,9 +39,10 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
     mac=lower(replace('falcon_device.mac_address', "-", ":")),\
     bunit=lower(replace(mvjoin('falcon_device.ou{}', ","), " ", "_")),\
     priority=case(match(category, "domain_controller"), "critical", match(category, "server|ubuntu|rhel|linux"), "high", true(), "medium"),\
-    is_expected=if(priority=="critical", "true", "false") \
+    is_expected=if(priority=="critical", "true", "false"),\
+    _key=md5(nt_host)\
 | iplocation falcon_device.external_ip \
 | rename lon as long, City as city, Country as country \
-| table ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
+| table _key,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
