--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - master
+      - "!docs/**"
     types: [opened, synchronize, ready_for_review]
 jobs:
   validate:
