adding gen field to category
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -32,7 +32,8 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
     "cs_sys_mf:".replace('falcon_device.system_manufacturer', "[,.]", ""),\
     "cs_sys_name:".replace('falcon_device.system_product_name', "[\(\)]", ""),\
     "cs_external_ip:".'falcon_device.external_ip',\
-    "cs_tags:".lower(replace(mvjoin('falcon_device.tags{}', ","),"(?i)FalconGroupingTags/|sensorgroupingtags/", ""))\
+    "cs_tags:".lower(replace(mvjoin('falcon_device.tags{}', ","),"(?i)FalconGroupingTags/|sensorgroupingtags/", "")),\
+    "gen:sa-crowdstrike"\
     ))), "|"), " |-", "_"), "(?:\|[^:]+:[_]+)(\|*)", "\1"),\
     nt_host=lower('falcon_device.hostname'),\
     dns=lower(nt_host.".".'falcon_device.machine_domain'),\
