--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -5,7 +5,7 @@ on:
       - main
       - master
       - "!docs/**"
-    types: [opened, synchronize, ready_for_review]
+    types: [opened, ready_for_review]
 jobs:
   validate:
     runs-on: ubuntu-latest
