adding dependency documentation
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,7 @@ extra:
 nav:
   - Home: index.md
   - Quick Start:
+      - Prerequisites: quickstart/prerequisites.md
       - Install: quickstart/install.md
       - Quickstart: quickstart/quickstart.md
   - Configure:
