excluding docs from wfa
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -4,7 +4,8 @@ on:
     branches:
       - main
       - master
-      - "!docs/**"
+    paths:
+      - "src/**"
     types: [opened, ready_for_review]
 jobs:
   validate:
