--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -42,16 +42,15 @@ jobs:
       - name: Get report
         run: |
           validate.sh report
-          ls ~/build/reports
       - name: Collect report
         uses: actions/upload-artifact@v3
         with:
-          name: appinspect report
+          name: Appinspect-report
           path: ~/build/reports/
       - name: Collect app package
         uses: actions/upload-artifact@v3
         with:
-          name: App package
+          name: App-package
           path: ~/build/packages/
       - name: Check Appinspect for issues
         run: validate.sh get_errors
