added configuration information
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,9 @@ nav:
       - Update Priority: configure/priority.md
       - Update Category: configure/category.md
       - Update Business Unit: configure/bunit.md
+      - Update Schedule: configure/schedule.md
+      - Best Practice:
+          - Clone Saved Search: configure/best-practice/clone-search.md
   - Reference:
       - All Configurations: reference/all-configurations.md
       - Asset Database mapping: reference/asset-mapping.md
