--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -12,7 +12,7 @@ dispatch.latest_time = -1m@m
 enableSched = 1
 schedule_window = auto
 search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
-| dedup falcon_device.device_id \
+| dedup falcon_device.device_id mac \
 | rename falcon_device.local_ip as ip \
 | eval \
     category=replace(replace(mvjoin(mvsort(lower(mvappend(\
@@ -49,6 +49,12 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
     _key=md5(nt_host)\
 | iplocation falcon_device.external_ip \
 | rename lon as long, City as city, Country as country \
+| eventstats values(mac) as mac, values(ip) as ip, values(dns) as dns by falcon_device.device_id \
+| dedup _key \
+| eval \
+    mac=mvjoin(mac, "|"),\
+    ip=mvjoin(ip, "|"),\
+    dns=mvjoin(dns, "|")\
 | table _key,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
