--- a/src/SA-CrowdstrikeDevices/default/app.conf
+++ b/src/SA-CrowdstrikeDevices/default/app.conf
@@ -16,7 +16,7 @@ version = 1.0.2
 
 [ui]
 is_visible = 0
-label      = SA-CrowdstrikeDevices for Enterprise Security
+label      = SA-CrowdstrikeDevices
 
 [package]
 id = SA-CrowdstrikeDevices
