--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,8 +84,8 @@ nav:
   - Reference:
       - All Configurations: reference/all-configurations.md
       - Asset Database mapping: reference/asset-mapping.md
-      - Crowdstrike Fields:
-          - Categories: reference/category.md
+      - Field reference:
+          - Category: reference/category.md
   - Troubleshooting:
       - troubleshooting/index.md
       - Solutions Guide:
