--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,7 +61,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/in/zachary-christensen28/
+      link: https://www.linkedin.com/in/zachthesplunker/
     - icon: fontawesome/brands/github
       link: https://github.com/ZachChristensen28
     - icon: fontawesome/brands/twitter
