--- a/src/SA-CrowdstrikeDevices/default/collections.conf
+++ b/src/SA-CrowdstrikeDevices/default/collections.conf
@@ -16,4 +16,5 @@ field.long        = string
 field.mac         = string
 field.nt_host     = string
 field.priority    = string
+field._last_seen  = time
 replicate         = true
