--- a/src/SA-CrowdstrikeDevices/default/macros.conf
+++ b/src/SA-CrowdstrikeDevices/default/macros.conf
@@ -6,3 +6,7 @@
 [sa_crowdstrike_index]
 definition = index=crowdstrike
 iseval = false
+
+[sa_crowdstrike_retention]
+definition = "-2d"
+iseval = false
