--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -58,3 +58,15 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | table _key,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
+
+[Crowdstrike Devices Lookup - Cleanup]
+disabled = false
+cron_schedule = 29 * * * *
+description = removes old entries from kvstore lookup: crowdstrike_devices
+dispatch.earliest_time = -1s
+dispatch.latest_time = now
+enableSched = 1
+schedule_window = auto
+search = | inputlookup crowdstrike_devices \
+| where _last_seen>relative_time(now(), `sa_crowdstrike_retention`) \
+| outputlookup crowdstrike_devices
