--- a/src/SA-CrowdstrikeDevices/default/transforms.conf
+++ b/src/SA-CrowdstrikeDevices/default/transforms.conf
@@ -8,4 +8,4 @@ external_type = kvstore
 collection = crowdstrike_devices_collection
 max_matches = 1
 case_sensitive_match = false
-fields_list = _key,bunit,category,city,country,dns,ip,is_expected,lat,long,mac,nt_host,priority
+fields_list = _key,_last_seen,bunit,category,city,country,dns,ip,is_expected,lat,long,mac,nt_host,priority
