adding _last_seen field

--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -54,8 +54,9 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | eval \
     mac=mvjoin(mac, "|"),\
     ip=mvjoin(ip, "|"),\
-    dns=mvjoin(dns, "|")\
-| table _key,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
+    dns=mvjoin(dns, "|"),\
+    _last_seen=now()\
+| table _key,_last_seen,ip,mac,nt_host,dns,bunit,priority,lat,long,city,country,category,is_expected \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
 
