--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -70,4 +70,5 @@ enableSched = 1
 schedule_window = auto
 search = | inputlookup crowdstrike_devices \
 | where _last_seen>relative_time(now(), `sa_crowdstrike_retention`) \
-| outputlookup crowdstrike_devices
+| outputlookup crowdstrike_devices \
+| stats count
