--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
       - Update Category: configure/category.md
       - Update Business Unit: configure/bunit.md
       - Update Schedule: configure/schedule.md
+      - Update Cleanup: configure/cleanup.md
       - Best Practice:
           - Clone Saved Search: configure/best-practice/clone-search.md
   - Reference:
