Added ES managed configuration
fixes #23

--- a/src/SA-CrowdstrikeDevices/default/app.conf
+++ b/src/SA-CrowdstrikeDevices/default/app.conf
@@ -4,7 +4,7 @@
 # into ../local and edit there.
 
 [install]
-state_change_requires_restart = true
+state_change_requires_restart = false
 is_configured = false
 state = enabled
 build = 2
@@ -20,3 +20,6 @@ label      = SA-CrowdstrikeDevices
 
 [package]
 id = SA-CrowdstrikeDevices
+
+[triggers]
+reload.managed_configurations = simple
