added macro settings

--- a/src/SA-CrowdstrikeDevices/default/managed_configurations.conf
+++ b/src/SA-CrowdstrikeDevices/default/managed_configurations.conf
@@ -10,3 +10,19 @@ editable = true
 label = Crowdstrike Devices Lookup - Gen
 lookup_type = search
 savedsearch = Crowdstrike Devices Lookup - Gen
+
+[setting:sa_crowdstrike_index]
+endpoint = /services/admin/macros/sa_crowdstrike_index
+label = SA-CrowdstrikeDevices index
+description = Configure SA-CrowdstrikeDevices index for Asset Database
+attribute = definition
+attribute_type = string
+link = [/manager/$@namespace$/data/macros/sa_crowdstrike_index?action=edit|Edit in manager]
+
+[setting:sa_crowdstrike_retention]
+endpoint = /services/admin/macros/sa_crowdstrike_retention
+label = SA-CrowdstrikeDevices Retention
+description = Amount of time before a device is removed from the Asset Database.
+attribute = definition
+attribute_type = string
+link = [/manager/$@namespace$/data/macros/sa_crowdstrike_retention?action=edit|Edit in manager]
