added new field format
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -15,31 +15,33 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | dedup falcon_device.device_id falcon_device.mac_address \
 | rename falcon_device.local_ip as ip \
 | eval \
-    category=replace(replace(mvjoin(mvsort(lower(mvappend(\
-    "cs_agent_version:".'falcon_device.agent_version', \
-    "cs_bios_mf:".replace('falcon_device.bios_manufacturer', "[,.]", ""), \
-    "cs_bios_version:".rtrim(replace(replace('falcon_device.bios_version', "(?i)(?<=ver)(\.)", ""), "[\(\)]", ""), " "), \
-    "cs_dv_control_applied:".'falcon_device.device_policies.device_control.applied',\
-    "cs_dv_firewall_applied:".'falcon_device.device_policies.firewall.applied',\
-    "cs_dv_globalconfig_applied:".'falcon_device.device_policies.global_config.applied',\
-    "cs_dv_sensorupdate_applied:".'falcon_device.device_policies.sensor_update.applied',\
-    "cs_uninstallprotection:".'falcon_device.device_policies.sensor_update.uninstall_protection',\
-    "cs_os_major_version:".'falcon_device.major_version',\
-    "cs_os_platform:".'falcon_device.platform_name',\
-    "cs_os_name:".'falcon_device.os_version',\
-    "cs_dv_type:".'falcon_device.product_type_desc',\
-    "cs_dv_status:".'falcon_device.status',\
-    "cs_sys_mf:".replace('falcon_device.system_manufacturer', "[,.]", ""),\
-    "cs_sys_name:".replace('falcon_device.system_product_name', "[\(\)]", ""),\
-    "cs_external_ip:".'falcon_device.external_ip',\
-    "cs_tags:".lower(replace(mvjoin('falcon_device.tags{}', ","),"(?i)FalconGroupingTags/|sensorgroupingtags/", "")),\
-    "gen:sa-crowdstrike"\
-    ))), "|"), " |-", "_"), "(?:\|[^:]+:[_]+)(\|*)", "\1"),\
-    category=category."|".mvjoin(mvappend(\
-    "cs_first_seen:".strftime(strptime('falcon_device.first_seen',"%FT%T%Z"), "%x %T %Z"),\
-    "cs_last_seen:".strftime(strptime('falcon_device.last_seen',"%FT%T%Z"), "%x %T %Z"),\
-    "splunk_last_updated:".strftime(now(), "%x %T %Z")\
-    ), "|"),\
+    category=mvjoin(mvsort(mvappend(\
+    "cs_agent_version: ".'falcon_device.agent_version',\
+    "bios: ".replace('falcon_device.bios_manufacturer', "[,.]", ""),\
+    "bios_version: ".rtrim(replace(replace('falcon_device.bios_version', "(?i)(?<=ver)(\.)", ""), "[\(\)]", ""), " "),\
+    "cs_dv_control_applied: ".'falcon_device.device_policies.device_control.applied',\
+    "cs_dv_firewall_applied: ".'falcon_device.device_policies.firewall.applied',\
+    "cs_dv_globalconfig_applied: ".'falcon_device.device_policies.global_config.applied',\
+    "cs_dv_sensorupdate_applied: ".'falcon_device.device_policies.sensor_update.applied',\
+    "cs_uninstallprotection: ".'falcon_device.device_policies.sensor_update.uninstall_protection',\
+    case('falcon_device.platform_name'=="Linux",mvappend("kernel_version: ".'falcon_device.kernel_version', "kernel_major_version: ".'falcon_device.major_version')),\
+    case('falcon_device.platform_name'!="Linux",mvappend("os_version: ".'falcon_device.kernel_version', "os_major_version: ".'falcon_device.major_version')),\
+    "os_platform: ".'falcon_device.platform_name',\
+    "os_name: ".'falcon_device.os_version',\
+    "dvc_type: ".'falcon_device.product_type_desc',\
+    "dvc_status: ".'falcon_device.status',\
+    "provision_status: ".'falcon_device.provision_status',\
+    "reduced_functionality_mode: ".'falcon_device.reduced_functionality_mode',\
+    "zone_group: ".'falcon_device.zone_group',\
+    "dvc_manufacturer: ".replace('falcon_device.system_manufacturer', "[,.]", ""),\
+    "dvc_name: ".replace('falcon_device.system_product_name', "[\(\)]", ""),\
+    "external_ip: ".'falcon_device.external_ip',\
+    "cs_tags: ".lower(replace(mvjoin('falcon_device.tags{}', ","),"(?i)FalconGroupingTags/|sensorgroupingtags/", "")),\
+    "gen: sa-crowdstrike",\
+    "cs_first_seen: ".strftime(strptime('falcon_device.first_seen',"%FT%T%Z"), "%x %T %Z"),\
+    "cs_last_seen: ".strftime(strptime('falcon_device.last_seen',"%FT%T%Z"), "%x %T %Z"),\
+    "splunk_last_updated: ".strftime(now(), "%x %T %Z")\
+    )), "|"),\
     nt_host=lower('falcon_device.hostname'),\
     dns=lower(nt_host.".".'falcon_device.machine_domain'),\
     mac=lower(replace('falcon_device.mac_address', "-", ":")),\
