--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,8 @@ plugins:
       height: auto
       zoomable: true
       draggable: true
-      # skip_classes:
-      #   - custom-skip-class-name
+      skip_classes:
+        - ignore-image
       auto_caption: true
       caption_position: bottom
   - search
@@ -60,6 +60,7 @@ markdown_extensions:
 
 theme:
   name: material
+  custom_dir: overrides
   #   logo:
   #   favicon:
   icon:
@@ -67,6 +68,7 @@ theme:
   logo: assets/sa-crowdstrike-logo-small.svg
   favicon: assets/sa-crowdstrike-logo-small.svg
   features:
+    # - announce.dismiss
     # - header.autohide
     - navigation.indexes
     - navigation.instant
@@ -82,6 +84,7 @@ theme:
     - search.highlight
     - search.share
     - content.action.edit
+    - content.tabs.link
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -98,14 +101,17 @@ theme:
         icon: material/weather-night
         name: Switch to light mode
 
+extra_css:
+  - stylesheets/extra.css
+
 extra:
   social:
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/zachthesplunker/
     - icon: fontawesome/brands/github
       link: https://github.com/ZachChristensen28
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/ZachTheSplunker
+    - icon: fontawesome/brands/mastodon
+      link: https://fosstodon.org/@ZachTheSplunker
 
 copyright: Copyright &copy; 2023 ZachTheSplunker
 
