added id and author stanzas
Signed-off-by: Zach Christensen <23529374+ZachChristensen28@users.noreply.github.com>

--- a/src/SA-CrowdstrikeDevices/default/app.conf
+++ b/src/SA-CrowdstrikeDevices/default/app.conf
@@ -3,6 +3,13 @@
 # To make changes, copy the section/stanza you want to change from ./default
 # into ../local and edit there.
 
+[author=ZachTheSplunker]
+email = zach@zachthesplunker.com
+
+[id]
+name = SA-CrowdstrikeDevices
+version = 1.1.0
+
 [install]
 state_change_requires_restart = false
 is_configured = false
