--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,6 @@ on:
 
 jobs:
   call-docs-workflow:
-    uses: ZachChristensen28/splunk-github-wfa/.github/workflows/docs.yml@e96bdc58732819aa2a1f2a03cb8794c92cacd9f6
+    uses: ZachChristensen28/splunk-github-wfa/.github/workflows/docs.yml@main
     with:
       config-path: docs/requirements.txt
