updated URLs to new format
Signed-off-by: Zachary Christensen <zchristensen@splunk.com>

--- a/docs/retype.yml
+++ b/docs/retype.yml
@@ -1,6 +1,6 @@
 input: .
 output: .retype
-url: splunk-sa-crowdstrike.ztsplunker.com
+url: splunk.github.io/SA-CrowdstrikeDevices/
 branding:
   title: SA-CrowdstrikeDevices
   label: v1.1.1
@@ -14,10 +14,6 @@ links:
   link: https://splunkbase.splunk.com/app/6573
   target: blank
   icon: apps
-- text: GitHub
-  link: https://github.com/ZachChristensen28/SA-CrowdstrikeDevices/releases
-  target: blank
-  icon: mark-github
 footer:
   copyright: "&copy; Copyright {{ year }}. All rights reserved.\nMade with :icon-heart-fill: by [ZachTheSplunker](https://www.linkedin.com/in/zachthesplunker/){ target=blank }"
   links: 
