--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -1,17 +1,13 @@
 name: fossa
 on:
   workflow_dispatch:
-  # pull_request:
-  #   branches:
-  #     - main
-  #     - master
-  #   paths:
-  #     - "src/**"
-  #   types: [opened, ready_for_review]
-  # push:
-  #   branches:
-  #     - main
-  #     - master
+  pull_request:
+    branches:
+      - main
+      - master
+    paths:
+      - "src/**"
+    types: [opened, ready_for_review]
 
 jobs:
   fossa-scan:
