--- a/src/SA-CrowdstrikeDevices/default/managed_configurations.conf
+++ b/src/SA-CrowdstrikeDevices/default/managed_configurations.conf
@@ -7,9 +7,9 @@
 description = Device information generated from SA-Crowdstrike Devices.
 endpoint = /services/data/transforms/lookups/crowdstrike_devices
 editable = true
-label = Crowdstrike Devices Lookup - Gen
+label = CrowdStrike Devices Lookup - Gen
 lookup_type = search
-savedsearch = Crowdstrike Devices Lookup - Gen
+savedsearch = CrowdStrike Devices Lookup - Gen
 
 [setting:sa_crowdstrike_index]
 endpoint = /services/admin/macros/sa_crowdstrike_index
