--- a/src/SA-CrowdstrikeDevices/default/savedsearches.conf
+++ b/src/SA-CrowdstrikeDevices/default/savedsearches.conf
@@ -3,7 +3,7 @@
 # To make changes, copy the section/stanza you want to change from ./default
 # into ../local and edit there.
 
-[Crowdstrike Devices Lookup - Gen]
+[CrowdStrike Devices Lookup - Gen]
 disabled = false
 cron_schedule = 19 * * * *
 description = populates kvstore lookup: crowdstrike_devices
@@ -62,7 +62,7 @@ search = `sa_crowdstrike_index` sourcetype="crowdstrike:device:json" \
 | outputlookup key_field=_key crowdstrike_devices \
 | stats count
 
-[Crowdstrike Devices Lookup - Cleanup]
+[CrowdStrike Devices Lookup - Cleanup]
 disabled = false
 cron_schedule = 29 * * * *
 description = removes old entries from kvstore lookup: crowdstrike_devices
