--- a/src/SA-CrowdstrikeDevices/default/app.conf
+++ b/src/SA-CrowdstrikeDevices/default/app.conf
@@ -18,7 +18,7 @@ build = 10
 
 [launcher]
 author  = ZachTheSplunker
-description = This supporting add-on allows device information pulled from Crowdstrike to be used with Splunk Enterprise Security's Asset Database.
+description = This supporting add-on allows device information pulled from CrowdStrike to be used with Splunk Enterprise Security's Asset Database.
 version = 1.1.1
 
 [ui]
